// =====================================================
// DATABASE SCHEMA - MER (ENTITY-RELATIONSHIP MODEL)
// DBML (Database Markup Language) Definition
// Updated based on actual migrations (September-December 2025)
// =====================================================

Project canserra_MER {
  database_type: 'MySQL'
  Note: '''
    # Database Schema - MER (Entity-Relationship Model)
    
    ## DESIGN RECOMMENDATIONS
    
    ### POLYMORPHIC RELATIONS
    - **documents_component**: Uses polymorphic relations (documentable_id/documentable_type) to attach documents to any model
    - **notes_component**: Uses polymorphic relations (noteable_id/noteable_type) to attach notes to any model
    
    ### EVALUATION SYSTEM
    - **evaluations**: Uses evaluation_uuid (UUID) to group multiple question-answer pairs into a single evaluation session
    - **quiz**: Stores individual questions
    - **evaluation_observations**: Stores observations/comments for each evaluation group
    - Each evaluation record links to one quiz question with an answer value (0-3)
    
    ### ACCIDENT MANAGEMENT
    - **professional_accidents**: Replaces the old ACCIDENT and ACCIDENT_FOLLOW_UP tables
    - Supports three types: 'Sin baixa', 'Amb baixa', 'Baixa Finalitzada'
  '''
}

// =====================================================
// CORE TABLES
// =====================================================

Table users {
  id int [pk, increment, note: 'Primary key']
  professional_id int [ref: > PROFESSIONAL.id, null, note: 'Reference to professional']
  name varchar(255) [null, note: 'User name']
  email varchar(255) [null, note: 'User email']
  password varchar(255) [null, note: 'Password hash']
  remember_token varchar(100) [null, note: 'Remember token']
  email_verified_at timestamp [null, note: 'Email verification timestamp']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table CENTER {
  id int [pk, increment, note: 'Primary key']
  name varchar(100) [not null, note: 'Center name']
  address varchar(100) [null, note: 'Center address']
  phone varchar(50) [null, note: 'Contact phone']
  email varchar(100) [null, note: 'Contact email']
  status int [null, note: 'Center status']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table PROFESSIONAL {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  name varchar(100) [not null, note: 'First name']
  surname1 varchar(100) [not null, note: 'First surname']
  surname2 varchar(100) [null, note: 'Second surname']
  role enum('Direcció', 'Administració', 'Tècnic', 'Gerència') [null, note: 'Professional role']
  dni varchar(100) [unique, note: 'DNI']
  phone varchar(20) [null, note: 'Contact phone']
  email varchar(255) [unique, null, note: 'Email address']
  address varchar(500) [null, note: 'Address']
  employment_status enum('Actiu', 'Suplència', 'No contractat') [null, note: 'Employment status']
  is_on_leave boolean [default: false, note: 'Is professional on leave?']
  cvitae text [null, note: 'Curriculum vitae']
  user varchar(50) [unique, null, note: 'Login username']
  password varchar(255) [null, note: 'Password hash']
  locker_num varchar(50) [null, note: 'Locker number']
  key_code varchar(50) [null, note: 'Key code']
  status int [null, note: 'Status: 1=Active, 0=Inactive']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// MATERIAL AND EQUIPMENT MANAGEMENT
// =====================================================

Table MATERIAL_ASSIGNMENT {
  id int [pk, increment, note: 'Primary key']
  professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Professional reference']
  shirt_size enum('XS', 'S', 'M', 'L', 'XL', '2XL', '3XL', '4XL', '36', '38', '40', '42', '44', '46', '48', '50', '52', '54', '56') [null, note: 'Shirt size']
  pants_size enum('XS', 'S', 'M', 'L', 'XL', '2XL', '3XL', '4XL', '36', '38', '40', '42', '44', '46', '48', '50', '52', '54', '56') [null, note: 'Pants size']
  shoe_size enum('34', '35', '36', '37', '38', '39', '40', '41', '42', '43', '44', '45', '46', '47', '48', '49', '50', '51', '52', '53', '54', '55', '56') [null, note: 'Shoe size']
  assignment_date date [not null, note: 'Assignment date']
  assigned_by_professional_id int [ref: > PROFESSIONAL.id, null, note: 'Professional who assigned']
  observations text [null, note: 'Observations about assignment']
  signature text [null, note: 'Signature Professional']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// TRAINING AND COURSE MANAGEMENT
// =====================================================

Table COURSE {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  training_center varchar(255) [null, note: 'Training center name']
  forcem_code varchar(50) [null, note: 'FORCEM code']
  total_hours int [null, note: 'Total course hours']
  type varchar(100) [null, note: 'Course type']
  attendance_type enum('Presencial', 'Online', 'Mixto') [null, note: 'Attendance type']
  training_name varchar(255) [null, note: 'Training name']
  workshop varchar(255) [null, note: 'Workshop name']
  conference_day varchar(255) [null, note: 'Conference day']
  congress varchar(255) [null, note: 'Congress name']
  attendee varchar(255) [null, note: 'Attendee name']
  start_date date [null, note: 'Course start date']
  end_date date [null, note: 'Course end date']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table COURSE_ASSIGNMENT {
  id int [pk, increment, note: 'Primary key']
  professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Professional reference']
  course_id int [ref: > COURSE.id, not null, note: 'Course reference']
  certificate enum('Entregat', 'Pendent') [default: 'Pendent', note: 'Certificate status']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// QUIZ AND EVALUATION MANAGEMENT
// =====================================================

Table QUIZ {
  id int [pk, increment, note: 'Primary key']
  question text [null, note: 'Question']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table EVALUATION {
  id int [pk, increment, note: 'Primary key']
  evaluation_uuid uuid [not null, note: 'Unique evaluation UUID for grouping records']
  evaluator_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Evaluator professional']
  evaluated_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Evaluated professional']
  question_id int [ref: > QUIZ.id, not null, note: 'Question ID from quiz table']
  answer int [not null, note: 'Answer value from 0 to 3']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table EVALUATION_OBSERVATIONS {
  id int [pk, increment, note: 'Primary key']
  evaluation_uuid uuid [not null, note: 'Evaluation UUID reference to group evaluations']
  observation text [null, note: 'Observation/comment for the evaluation']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// SERVICE AND CONTACT MANAGEMENT
// =====================================================

Table EXTERNAL_CONTACT {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  external_contact_type varchar(100) [null, note: 'External contact type']
  service_reason varchar(255) [null, note: 'Service reason']
  company varchar(255) [null, note: 'Company name']
  department varchar(255) [null, note: 'Department']
  name varchar(255) [null, note: 'Contact name']
  surname varchar(255) [null, note: 'Contact surname']
  link varchar(500) [null, note: 'Link/Enlace']
  phone varchar(20) [null, note: 'Contact phone']
  email varchar(255) [null, note: 'Contact email']
  observations text [null, note: 'Observations']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table GENERAL_SERVICE {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  service_type varchar(100) [not null, note: 'Service type']
  responsible varchar(255) [null, note: 'Responsible']
  responsible_info text [null, note: 'Responsible Contact Info']
  planning text [null, note: 'Planning']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table COMPLEMENTARY_SERVICE {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  service_type varchar(255) [null, note: 'Service type']
  service_responsible varchar(255) [null, note: 'Service responsible']
  start_date date [not null, note: 'Service start date']
  end_date date [null, note: 'Service end date']
  status int [null, note: 'Service status']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// MAINTENANCE MANAGEMENT
// =====================================================

Table MAINTENANCE {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  name_maintenance varchar(100) [not null, note: 'Maintenance name']
  responsible_maintenance varchar(100) [null, note: 'Person/Company who performs this maintenance']
  description text [null, note: 'Maintenance description']
  opening_date_maintenance date [not null, note: 'Maintenance opening date']
  ending_date_maintenance date [null, note: 'Maintenance ending date']
  status int [null, note: 'Maintenance status']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// HR ISSUES MANAGEMENT
// =====================================================

Table HR_ISSUES {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  opening_date date [not null, note: 'Opening date']
  closing_date date [null, note: 'Closing date']
  affected_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Affected professional']
  registering_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Professional who registered']
  referred_to_professional_id int [ref: > PROFESSIONAL.id, null, note: 'Professional referred to']
  description text [not null, note: 'Issue description']
  status enum('Obert', 'Tancat') [default: 'Obert', note: 'Issue status']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// PROJECT AND COMMISSION MANAGEMENT
// =====================================================

Table PROJECT_COMMISSION {
  id int [pk, increment, note: 'Primary key']
  center_id int [ref: > CENTER.id, null, note: 'Reference to center']
  name varchar(255) [not null, note: 'Project/Commission name']
  start_date date [null, note: 'Start date']
  estimated_end_date date [null, note: 'Estimated end date']
  responsible_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Responsible professional']
  description text [null, note: 'Project description']
  type enum('Projecte', 'Comissió') [null, note: 'Type: Projecte, Comissió']
  status enum('Actiu', 'Inactiu') [null, note: 'Status: Actiu, Inactiu']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table PROJECT_COMMISSION_ASSIGNMENT {
  id int [pk, increment, note: 'Primary key']
  project_commission_id int [ref: > PROJECT_COMMISSION.id, not null, note: 'Project/Commission reference']
  professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Professional reference']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// ACCIDENT MANAGEMENT
// =====================================================

Table PROFESSIONAL_ACCIDENT {
  id int [pk, increment, note: 'Primary key']
  type enum('Sin baixa', 'Amb baixa', 'Baixa Finalitzada') [not null, note: 'Accident type: with or without leave, or ended leave']
  date date [not null, note: 'Accident date']
  context text [null, note: 'Accident context']
  description text [null, note: 'Accident description']
  created_by_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Professional who created the record']
  affected_professional_id int [ref: > PROFESSIONAL.id, not null, note: 'Affected professional']
  duration int [null, note: 'Leave duration in days (for Amb baixa type)']
  start_date date [null, note: 'Leave start date (for Amb baixa type)']
  end_date date [null, note: 'Leave end date (for Amb baixa type)']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

// =====================================================
// POLYMORPHIC DOCUMENT AND NOTE COMPONENTS
// =====================================================

Table DOCUMENTS_COMPONENT {
  id int [pk, increment, note: 'Primary key']
  file_name varchar(255) [not null, note: 'Hashed file name stored in filesystem']
  original_name varchar(255) [not null, note: 'Original file name uploaded by user']
  file_path varchar(500) [null, note: 'Path where file is stored in filesystem']
  file_size int [null, note: 'File size in bytes']
  mime_type varchar(100) [null, note: 'MIME type of the file']
  documentable_id int [not null, note: 'Polymorphic: ID of related model']
  documentable_type varchar(255) [not null, note: 'Polymorphic: Type of related model (App\\Models\\Center, App\\Models\\ProjectCommission, etc.)']
  uploaded_by_professional_id int [ref: > PROFESSIONAL.id, null, note: 'Professional that uploaded the document']
  document_type enum('Organització del Centre', 'Documents del Departament', 'Memòries i Seguiment anual', 'PRL', 'Comitè Empresa', 'Informes professionals', 'Informes persones usuàries', 'Qualitat i ISO', 'Projectes', 'Comissions', 'Famílies', 'Comunicació i Reunions', 'Altres') [default: 'Altres', null, note: 'Type of document']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}

Table NOTES_COMPONENT {
  id int [pk, increment, note: 'Primary key']
  notes text [null, note: 'Notes content']
  noteable_id int [not null, note: 'Polymorphic: ID of related model']
  noteable_type varchar(255) [not null, note: 'Polymorphic: Type of related model (App\\Models\\Center, App\\Models\\Professional, App\\Models\\ProjectCommission, etc.)']
  created_by_professional_id int [ref: > PROFESSIONAL.id, null, note: 'Professional that created the note']
  restricted int [null, note: 'Restricted note flag by role']
  created_at timestamp [note: 'Creation timestamp']
  updated_at timestamp [note: 'Update timestamp']
}
